fixed bottom text gap and order

--- a/assets/azhar.css
+++ b/assets/azhar.css
@@ -517,8 +517,14 @@ MEDIA QUERIES CSS
     text-align: center;
     align-items: center;
   }
+  .banner_container {
+    display: flex;
+    flex-direction: column;
+}
   .banner_image_container {
     position: static;
+        order: 3;
+        margin: 20px 0;
   }
   a.button_black.desktop_visible {
     display: none;
